--- a/website/index.html
+++ b/website/index.html
@@ -138,8 +138,7 @@ nanoHttp add -name myserver -web-folder /path/to/files
 nanoHttp add -name myserver \
   -port 8080 \
   -web-folder /path/to/files \
-  -allow-dir-listing \
-  -ssl-cert-folder /path/to/certs</code>
+  -allow-dir-listing</code>
                         <div class="code-block-footer">Click to copy</div>
                     </div>
                 </div>
