--- a/website/index.html
+++ b/website/index.html
@@ -177,6 +177,11 @@ nanoHttp list</code>
     <!-- Toast Notification -->
     <div class="toast" id="toast">Copied to clipboard!</div>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTop" class="scroll-to-top" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
         <ul>
