--- a/website/index.html
+++ b/website/index.html
@@ -87,7 +87,7 @@
                     <h3>Quick Install</h3>
                     <div class="code-block">
                         <code>curl -fsSL https://nanohttp.mguptahub.com/install.sh | bash</code>
-                        <div class="code-block-footer">Click to copy</div>
+                        <div class="code-block-footer"><i class="fas fa-copy"></i></div>
                     </div>
                 </div>
                 <div class="install-option">
@@ -106,7 +106,7 @@ chmod +x nanoHttp-linux-amd64
 
 # Move to /usr/local/bin
 sudo mv nanoHttp-linux-amd64 /usr/local/bin/nanoHttp</code>
-                            <div class="code-block-footer">Click to copy</div>
+                            <div class="code-block-footer"><i class="fas fa-copy"></i></div>
                         </div>
                     </div>
                     <div id="macos" class="tab-content">
@@ -119,7 +119,7 @@ chmod +x nanoHttp-darwin-amd64
 
 # Move to /usr/local/bin
 sudo mv nanoHttp-darwin-amd64 /usr/local/bin/nanoHttp</code>
-                            <div class="code-block-footer">Click to copy</div>
+                            <div class="code-block-footer"><i class="fas fa-copy"></i></div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@ nanoHttp add -name myserver \
   -port 8080 \
   -web-folder /path/to/files \
   -allow-dir-listing</code>
-                        <div class="code-block-footer">Click to copy</div>
+                        <div class="code-block-footer"><i class="fas fa-copy"></i></div>
                     </div>
                 </div>
                 <div class="usage-example">
@@ -157,7 +157,7 @@ nanoHttp delete myserver
 
 # List all instances
 nanoHttp list</code>
-                        <div class="code-block-footer">Click to copy</div>
+                        <div class="code-block-footer"><i class="fas fa-copy"></i></div>
                     </div>
                 </div>
             </div>
